[#9415] modular tree configuration

--- a/api-domain/src/main/resources/descriptors/uitree-api.yaml
+++ b/api-domain/src/main/resources/descriptors/uitree-api.yaml
@@ -315,6 +315,9 @@ components:
       properties:
         config:
           type: string
+        viewUuid:
+          type: string
+          format: uuid
         nodes:
           type: object
           additionalProperties:
