[#9549] Filter UI - Angular

--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -18,7 +18,8 @@ smartbit4all {
     	"LocalDateTime": "java.time.LocalDateTime",
     	"LocalDate": "java.time.LocalDate",
     	"LocalTime": "java.time.LocalTime",
-    	"UiAction": "org.smartbit4all.api.view.bean.UiAction"
+    	"UiAction": "org.smartbit4all.api.view.bean.UiAction",
+  		"Value": "org.smartbit4all.api.value.bean.Value",
   	]
   }
 }
