[#9549] filter2 api yaml updated

--- a/api-domain/src/main/resources/descriptors/filter2-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filter2-api.yaml
@@ -24,7 +24,7 @@ components:
         possibleActions:
           type: array
           items:
-            type: "#/components/schemas/UiAction"
+            type: UiAction
         filterGroups:
           type: array
           items:
@@ -76,11 +76,11 @@ components:
         possibleValues:
           type: array
           items:
-            type: "#/components/schemas/Value"
+            type: Value
         selectedValues:
           type: array
           items:
-            type: "#/components/schemas/Value"
+            type: Value
         widgetType:
           $ref: "#/components/schemas/FilterField2_WidgetType"
         data1:
