[#9648] add USER_SELECT to UiActionInputType

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -378,6 +378,7 @@ components:
         - none
         - textfield
         - textarea
+        - user_select
     UiActionRequest:
       type: object
       description: 
