[#9691] Angular - generic grid component and service v5

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -20,7 +20,9 @@ components:
       required: [header, totalRowCount, rows]
       properties:
         viewOption:
-          $ref: '#/components/schemas/GridViewOption'
+          type: array
+          items:
+            $ref: '#/components/schemas/GridViewOption'
         page:
           $ref: '#/components/schemas/GridContentPage'
     GridContentPage:
