[#9769] add setSelectedNode to TreeApi

--- a/api-domain/src/main/resources/descriptors/uitree-api.yaml
+++ b/api-domain/src/main/resources/descriptors/uitree-api.yaml
@@ -374,3 +374,19 @@ components:
           type: array
           items:
             type: UiAction
+    UiTreePath:
+      type: object
+      required: [parts]
+      properties:
+        parts:
+          type: array
+          items:
+            $ref: '#/components/schemas/UiTreePathPart'
+    UiTreePathPart:
+      type: object
+      properties:
+        objectUri:
+          type: string
+          format: uri
+        nodeType:
+          type: string
